# sales-cube-preprocessing

./: .gitignore  ASSUMPTIONS.md  DATA_MODEL.md  README.md  ROADMAP.md  TEST_SCENARIOS.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml  s3-cors.json
backend/app/: apply.py  config.py  detect.py  main.py  schema.py
backend/app/api/: dependencies.py  routes.py  schemas.py
backend/app/detectors/: base.py  double_bookings.py  negatives.py  outliers.py  refunds.py
backend/app/storage/: manifest.py  s3.py
backend/scripts/: bench.py
backend/tests/: conftest.py  test_apply.py  test_detect.py  test_generator.py  test_schema.py
backend/tests/api/: conftest.py  test_routes.py
backend/tests/detectors/: test_double_bookings.py  test_negatives.py  test_outliers.py  test_refunds.py
backend/tests/storage/: conftest.py  test_manifest.py  test_s3.py
data/: build_scenarios.py  build_test_fixtures.py  generator.py
data/scenarios/: dirty.parquet  happy.parquet
data/source/: Untitled.ipynb  data_cleaning_pvm_cube_input_df_sales.parquet
data/test_fixtures/: c2_overlap_triple.parquet  c3_numeric_id.parquet  dbl04_many_pairs.parquet  demo_mixed_anomalies.parquet  neg03_many.parquet  out_storm.parquet  ref02_round_reversals.parquet  rev01_no_anomalies.parquet  sch02_yyyy_mm.parquet  sch03_mon_yy.parquet  sch04_quarterly.parquet  sch05_mixed_formats.parquet  sch06_single_id.parquet  sch10_no_id.parquet  sch11_no_measure.parquet  sch12_no_time.parquet  sch13_dup_rows.parquet  up02_csv.csv  (+10 more)
frontend/: index.html  package.json  pnpm-lock.yaml
(+22 files in other folders)
