[project]
name = "keye-backend"
version = "0.1.0"
description = "Sales cube cleaning tool backend"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "pandera>=0.31.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "moto>=5.2.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
